refactored appointment flow
